🐛 Fix CKS WVA deploy: use 'kubernetes' environment instead of 'default'
The WVA install.sh only supports 'kubernetes', 'openshift', and
'kind-emulator' environments. The CKS reusable workflow was passing
ENVIRONMENT=default, causing install.sh to fail with:
  "Environment script not found: .../deploy/default/install.sh"

Signed-off-by: Andy Anderson <andy@clubanderson.com>
Signed-off-by: Andrew Anderson <andy@clubanderson.com>

--- a/.github/workflows/reusable-nightly-e2e-cks-helmfile.yaml
+++ b/.github/workflows/reusable-nightly-e2e-cks-helmfile.yaml
@@ -459,7 +459,7 @@ jobs:
       - name: Deploy guide via WVA install.sh
         if: inputs.deploy_wva
         env:
-          ENVIRONMENT: default
+          ENVIRONMENT: kubernetes
           INSTALL_GATEWAY_CTRLPLANE: "false"
           BENCHMARK_MODE: "false"
           E2E_TESTS_ENABLED: "true"
