fix: use Recreate strategy for GPU deployments during priority patching
When priority-patching GPU deployments with nightly-gpu-critical,
the pod template change triggers a rolling update. With RollingUpdate
strategy, new pods cannot start because old pods still hold the GPUs,
causing a deadlock. Using Recreate strategy kills all old pods first,
freeing GPU resources for the new pods.

StatefulSets retain the default patch (no strategy change) since they
may have different update semantics.

Signed-off-by: Andrew Anderson <andy@clubanderson.com>

--- a/.github/workflows/reusable-nightly-e2e-openshift-helmfile.yaml
+++ b/.github/workflows/reusable-nightly-e2e-openshift-helmfile.yaml
@@ -660,8 +660,15 @@ jobs:
                 jq '[.spec.template.spec.containers[]?.resources.limits["nvidia.com/gpu"] // "0" | tonumber] | add // 0')
               if [ "$GPU_REQ" -gt 0 ]; then
                 echo "  Patching $kind/$name (requests $GPU_REQ GPU(s))..."
-                kubectl patch "$kind" "$name" -n "$NAMESPACE" --type=strategic -p \
-                  '{"spec":{"template":{"spec":{"priorityClassName":"nightly-gpu-critical"}}}}'
+                if [ "$kind" = "deployment" ]; then
+                  # Use Recreate strategy for GPU deployments to avoid rolling update deadlock.
+                  # With RollingUpdate, new pods can't start because old pods hold the GPUs.
+                  kubectl patch "$kind" "$name" -n "$NAMESPACE" --type=strategic -p \
+                    '{"spec":{"strategy":{"type":"Recreate"},"template":{"spec":{"priorityClassName":"nightly-gpu-critical"}}}}'
+                else
+                  kubectl patch "$kind" "$name" -n "$NAMESPACE" --type=strategic -p \
+                    '{"spec":{"template":{"spec":{"priorityClassName":"nightly-gpu-critical"}}}}'
+                fi
               fi
             done
           done
