fix: use merge patch for Recreate strategy to remove rollingUpdate config
Strategic merge patch preserves the existing rollingUpdate field when
setting strategy.type=Recreate, which Kubernetes rejects ("may not be
specified when strategy type is Recreate"). Using --type=merge replaces
the entire strategy object, removing the conflicting rollingUpdate config.

Signed-off-by: Andrew Anderson <andy@clubanderson.com>

--- a/.github/workflows/reusable-nightly-e2e-gke-helmfile.yaml
+++ b/.github/workflows/reusable-nightly-e2e-gke-helmfile.yaml
@@ -475,7 +475,9 @@ jobs:
                 if [ "$kind" = "deployment" ]; then
                   # Use Recreate strategy for GPU deployments to avoid rolling update deadlock.
                   # With RollingUpdate, new pods can't start because old pods hold the GPUs.
-                  kubectl patch "$kind" "$name" -n "$NAMESPACE" --type=strategic -p \
+                  # Use merge patch (not strategic) so it replaces the strategy object entirely,
+                  # removing any existing rollingUpdate config that conflicts with Recreate.
+                  kubectl patch "$kind" "$name" -n "$NAMESPACE" --type=merge -p \
                     '{"spec":{"strategy":{"type":"Recreate"},"template":{"spec":{"priorityClassName":"nightly-gpu-critical"}}}}'
                 else
                   kubectl patch "$kind" "$name" -n "$NAMESPACE" --type=strategic -p \
