fix: explicitly null rollingUpdate when setting Recreate strategy
JSON merge patch merges at each level rather than replacing objects,
so the existing rollingUpdate config was preserved alongside the new
Recreate strategy type. Setting "rollingUpdate": null explicitly
removes the field, which Kubernetes requires when using Recreate.

Signed-off-by: Andrew Anderson <andy@clubanderson.com>

--- a/.github/workflows/reusable-nightly-e2e-openshift-helmfile.yaml
+++ b/.github/workflows/reusable-nightly-e2e-openshift-helmfile.yaml
@@ -663,10 +663,10 @@ jobs:
                 if [ "$kind" = "deployment" ]; then
                   # Use Recreate strategy for GPU deployments to avoid rolling update deadlock.
                   # With RollingUpdate, new pods can't start because old pods hold the GPUs.
-                  # Use merge patch (not strategic) so it replaces the strategy object entirely,
-                  # removing any existing rollingUpdate config that conflicts with Recreate.
+                  # Use merge patch with rollingUpdate:null to clear the existing rollingUpdate
+                  # config, which Kubernetes rejects when strategy type is Recreate.
                   kubectl patch "$kind" "$name" -n "$NAMESPACE" --type=merge -p \
-                    '{"spec":{"strategy":{"type":"Recreate"},"template":{"spec":{"priorityClassName":"nightly-gpu-critical"}}}}'
+                    '{"spec":{"strategy":{"type":"Recreate","rollingUpdate":null},"template":{"spec":{"priorityClassName":"nightly-gpu-critical"}}}}'
                 else
                   kubectl patch "$kind" "$name" -n "$NAMESPACE" --type=strategic -p \
                     '{"spec":{"template":{"spec":{"priorityClassName":"nightly-gpu-critical"}}}}'
